Map NULL_UUID activity to ALL activities

REVIEW: 109274
BUG: 314830
FIXED-IN: 4.10.2